--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -143,6 +143,17 @@ select {
   #table-area td {
     font-size: 1em;
   }
+  .hero {
+    position: relative;
+    height: 50px;
+    padding: 20px;
+    margin: 0;
+    /* background: black; */
+    background-image: url("../images/bikeshare.jpg");
+    background-attachment: fixed;
+    background-position: bottom center;
+    background-size: cover;
+  }
 }
 
 @media (max-width: 500px) {
@@ -187,7 +198,7 @@ select {
   }
   .hero {
     position: relative;
-    height: 100px;
+    height: 50px;
     padding: 20px;
     margin: 0;
     /* background: black; */
