--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -145,7 +145,7 @@ select {
   }
   .hero {
     position: relative;
-    height: 300px;
+    /*height: 300px;*/
     padding: 20px;
     margin: 0;
     /* background: black; */
@@ -198,7 +198,7 @@ select {
   }
   .hero {
     position: relative;
-    height: 300px;
+    /*height: 300px;*/
     padding: 20px;
     margin: 0;
     /* background: black; */
