--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -145,7 +145,7 @@ select {
   }
   .hero {
     position: relative;
-    /*height: 300px;*/
+    height: 400px;
     padding: 20px;
     margin: 0;
     /* background: black; */
@@ -198,7 +198,7 @@ select {
   }
   .hero {
     position: relative;
-    /*height: 300px;*/
+    height: 400px;
     padding: 20px;
     margin: 0;
     /* background: black; */
@@ -231,7 +231,8 @@ select {
   }
 
   to {
-    font-size: 5.5rem;
+    font-size: 6.5rem;
+    /*font-size: 5.5rem;*/
     opacity: 1;
   }
 }
