Fix responsive display

--- a/bikeshare_app/templates/graphs.html
+++ b/bikeshare_app/templates/graphs.html
@@ -22,12 +22,12 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">Bikeshare Data
-            <img class="nav-ufo" src="static/images/ufo.svg">
+            <!-- <img class="nav-ufo" src="static/images/ufo.svg"> -->
           </a>
         </div>
       </div>
     </nav>
-    <div class="hero text-center">
+    <div style= "background-image: url('../static/images/bikeshare.jpg');" class="hero text-center">
       <h1>Let's explore some graphs of US bikeshare data!</h1>
       <!-- <p>Let\'s explore some US bikeshare data!</p> -->
     </div>
