Fix responsive display

--- a/bikeshare_app/templates/index.html
+++ b/bikeshare_app/templates/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">Bikeshare Data
+          <a class="navbar-brand" href="/">Bikeshare Data
             <img class="nav-ufo">
           </a>
         </div>
