--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -145,14 +145,15 @@ select {
   }
   .hero {
     position: relative;
-    /*height: 400px;*/
-    height: 50%;
+    height: 400px;
+    /*height: 50%;*/
     padding: 20px;
     margin: 0;
     /* background: black; */
     background-image: url("../images/bikeshare.jpg");
     background-attachment: fixed;
-    background-position: bottom center;
+    /*background-position: bottom center;*/
+    background-position: top center;
     background-size: cover;
   }
 }
@@ -199,14 +200,15 @@ select {
   }
   .hero {
     position: relative;
-    /*height: 400px;*/
-    height: 50%;
+    height: 400px;
+    /*height: 50%;*/
     padding: 20px;
     margin: 0;
     /* background: black; */
     background-image: url("../images/bikeshare.jpg");
     background-attachment: fixed;
-    background-position: bottom center;
+    /*background-position: bottom center;*/
+    background-position: top center;
     background-size: cover;
   }
 
