--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -154,7 +154,8 @@ select {
     background-attachment: fixed;
     /*background-position: bottom center;*/
     background-position: top center;
-    background-size: cover;
+    background-size: 100% 100%;
+    /*background-size: cover;*/
   }
 }
 
@@ -209,7 +210,8 @@ select {
     background-attachment: fixed;
     /*background-position: bottom center;*/
     background-position: top center;
-    background-size: cover;
+    /*background-size: cover;*/
+    background-size: 100% 100%;
   }
 
   .hero h1 {
