--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -154,7 +154,7 @@ select {
     background-attachment: fixed;
     /*background-position: bottom center;*/
     background-position: top center;
-    background-size: 100% 100%;
+    background-size: contain;
     /*background-size: cover;*/
   }
 }
@@ -211,7 +211,7 @@ select {
     /*background-position: bottom center;*/
     background-position: top center;
     /*background-size: cover;*/
-    background-size: 100% 100%;
+    background-size: contain;
   }
 
   .hero h1 {
