--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -152,8 +152,8 @@ select {
     /* background: black; */
     background-image: url("../images/bikeshare.jpg");
     background-attachment: fixed;
-    background-position: bottom center;
-    /*background-position: top center;*/
+    /*background-position: bottom center;*/
+    background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     /*background-size: cover;*/
@@ -209,8 +209,8 @@ select {
     /* background: black; */
     background-image: url("../images/bikeshare.jpg");
     background-attachment: fixed;
-    background-position: bottom center;
-    /*background-position: top center;*/
+    /*background-position: bottom center;*/
+    background-position: center;
     /*background-size: cover;*/
     background-repeat: no-repeat;
     background-size: contain;
