--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -145,7 +145,7 @@ select {
   }
   .hero {
     position: relative;
-    height: 400px;
+    /*height: 400px;*/
     /*height: 50%;*/
     padding: 20px;
     margin: 0;
@@ -153,7 +153,7 @@ select {
     background-image: url("../images/bikeshare.jpg");
     background-attachment: fixed;
     /*background-position: bottom center;*/
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: contain;
     /*background-size: cover;*/
@@ -202,7 +202,7 @@ select {
   }
   .hero {
     position: relative;
-    height: 400px;
+    /*height: 400px;*/
     /*height: 50%;*/
     padding: 20px;
     margin: 0;
@@ -210,7 +210,7 @@ select {
     background-image: url("../images/bikeshare.jpg");
     background-attachment: fixed;
     /*background-position: bottom center;*/
-    background-position: center;
+    background-position: top center;
     /*background-size: cover;*/
     background-repeat: no-repeat;
     background-size: contain;
