--- a/bikeshare_app/templates/index.html
+++ b/bikeshare_app/templates/index.html
@@ -28,8 +28,8 @@
       </div>
     </nav>
   
-    <div style= "background-image: url('../static/images/bikeshare.jpg');" class="hero text-center">
-      <!-- <div class=" hero text-center">  style= "background-image: url('static/images/bikeshare_copy.jpg');"-->
+    <div class="hero text-center">
+      <!-- <div class=" hero text-center">  style= "background-image: url('../static/images/bikeshare.jpg');""-->
     
       <h1>Let's explore some US bikeshare data!</h1>
       <!-- <p>Let\'s explore some US bikeshare data!</p> style="background-color: rgba(0,0,0,.7); width:100%; height: 100%" -->
