--- a/bikeshare_app/templates/graphs.html
+++ b/bikeshare_app/templates/graphs.html
@@ -27,9 +27,11 @@
         </div>
       </div>
     </nav>
-    <div style= "background-image: url('../static/images/bikeshare.jpg');" class="hero text-center">
-      <h1>Let's explore some graphs of US bikeshare data!</h1>
-      <!-- <p>Let\'s explore some US bikeshare data!</p> -->
+    <div id= "myHeader"></div>
+      <div class="hero text-center">
+        <h1>Let's explore some graphs of US bikeshare data!</h1>
+        <!-- <p>Let\'s explore some US bikeshare data!</p> -->
+      </div>
     </div>
     <div class="container">
       <div class="row margin-top-50">
