Fix responsive display

--- a/bikeshare_app/templates/graphs.html
+++ b/bikeshare_app/templates/graphs.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </nav>
-    <div id= "myHeader"></div>
+    <div id= "myHeader">
       <div class="hero text-center">
         <h1>Let's explore some graphs of US bikeshare data!</h1>
         <!-- <p>Let\'s explore some US bikeshare data!</p> -->
