--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -158,6 +158,11 @@ select {
     background-size: contain;
     /*background-size: cover;*/
   }
+  .hero h1 {
+    animation: smaller-title 1.2s forwards linear;
+    margin-top: 10px;
+  }
+  
   #myHeader {
     height:200px;
   }
@@ -221,6 +226,7 @@ select {
 
   .hero h1 {
     animation: smaller-title 1.2s forwards linear;
+    margin-top: 10px;
   }
 
   #myHeader {
