--- a/bikeshare_app/templates/index.html
+++ b/bikeshare_app/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UFO Finder</title>
+  <title>Bikeshare Data - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -27,14 +27,15 @@
         </div>
       </div>
     </nav>
-  
-    <div class="hero text-center">
-      <!-- <div class=" hero text-center">  style= "background-image: url('../static/images/bikeshare.jpg');""-->
-    
-      <h1>Let's explore some US bikeshare data!</h1>
-      <!-- <p>Let\'s explore some US bikeshare data!</p> style="background-color: rgba(0,0,0,.7); width:100%; height: 100%" -->
-      <!-- </div> -->
-    </div>
+    <div id= "myHeader">
+      <div class="hero text-center">
+        <!-- <div class=" hero text-center">  style= "background-image: url('../static/images/bikeshare.jpg');""-->
+      
+        <h1>Let's explore some US bikeshare data!</h1>
+        <!-- <p>Let\'s explore some US bikeshare data!</p> style="background-color: rgba(0,0,0,.7); width:100%; height: 100%" -->
+        <!-- </div> -->
+      </div>
+  </div>
 
     <div class="container">
       <div class="row margin-top-50">
