Fix responsive display

--- a/bikeshare_app/templates/graphs.html
+++ b/bikeshare_app/templates/graphs.html
@@ -42,7 +42,7 @@
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
                 <form action = "{{ url_for('main') }}" method="POST">
-                  <form action="{{ url_for('main') }}" method="POST">
+                  <!-- <form action="{{ url_for('main') }}" method="POST"> -->
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
