--- a/bikeshare_app/templates/index.html
+++ b/bikeshare_app/templates/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
-  <style>
+  <!-- <style>
     .result_paragraph p {
       font-size:18pt;
     }
     
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -89,6 +89,7 @@
         </div>
  
         <!-- Statistics -->
+        <div class ="row">
         <div class="col-md-12 result_paragraph container">
           <div class="col-md-12">
              <!-- ===================================== -->
@@ -513,6 +514,7 @@
         {% endif %}
           </div>
         </div><!-- Ends Statistics -->
+        </div>
 
  
     <footer class="footer">
