--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -163,6 +163,7 @@ select {
   }
   .hero h1 {
     animation: smaller-title 1.2s forwards linear;
+    font-size: 0.1rem;
     /* font-size: 0.2rem; */
     margin-top: 20px;
   }
@@ -189,6 +190,7 @@ select {
 
   .hero h1 {
     animation: smaller-title 1.2s forwards linear;
+    font-size: 0.1rem;
     margin-top: 20px;
   }
 
