--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -201,7 +201,8 @@ select {
   }
 
   to {
-    font-size : 5.5rem;
+    font-size : 10px;
+    /* font-size : 4.5rem; */
     /* font-size: 16.5rem; */
     /* font-size: 0.5rem; */
     opacity: 1;
