--- a/bikeshare_app/static/css/style.css
+++ b/bikeshare_app/static/css/style.css
@@ -211,6 +211,35 @@ select {
   }
 }
 
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+  .hero {
+    position: relative;
+    height: 200px;
+    /*height: 50%;*/
+    padding: 20px;
+    margin: 0;
+    /* background: black; */
+    background-image: url("../images/bikeshare.jpg");
+    background-attachment: fixed;
+    /*background-position: bottom center;*/
+    background-position: top center;
+    /*background-size: cover;*/
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .hero h1 {
+    animation: medium-title 1.2s forwards linear;
+    margin-top:10px;
+    /* font-size: 0.1rem;
+    margin-top: 20px; */
+  }
+
+  #myHeader {
+    height:200px;
+  }
+}
+
 
 /* keyframe animations which will be used to animate the title */
 @keyframes title {
